  instead. This new server is a soft dependency as medusa which is still
  preferred if both are available (modulo python version).
  (Vincent Ladeuil)

Internals
*********

* ``BtreeIndex._spill_mem_keys_to_disk()`` now generates disk index with
  optmizations turned off. This only has effect when processing > 100,000
  keys during something like ``bzr pack``. (John Arbash Meinel)

* ``DirState`` can now be passed a custom ``SHA1Provider`` object
  enabling it to store the SHA1 and stat of the canonical (post
  content filtered) form. (Ian Clatworthy)

* New ``assertLength`` method based on one Martin has squirreled away
  somewhere. (Robert Collins, Martin Pool)

* New hook ``BzrDir.pre_open`` which runs before opening ``BzrDir``
  objects, allowing better enforcement of the smart server jail when
  dealing with stacked branches. (Robert Collins, Andrew Bennetts)

* New repository method ``refresh_data`` to cause any repository to
  make visible data inserted into the repository by a smart server
  fetch operation. (Robert Collins, Andrew Bennetts)

* Removed ``InterRemoteToOther``, ``InterOtherToRemote`` and
  ``InterPackToRemotePack`` classes, as they are now unnecessary.
  (Andrew Bennetts)

* ``bzr selftest`` now accepts ``--subunit`` to run in subunit output
  mode. Requires ``lp:subunit`` installed to work, but is not a hard
  dependency. (Robert Collins)

* ``_walk_to_common_revisions`` will now batch up at least 50
  revisions before calling ``get_parent_map`` on the target,
  regardless of ``InterRepository``.
  (Andrew Bennetts, Robert Collins)


bzr 1.13
########

:Codename: paraskavedekatriaphobia
:1.13: 2009-03-14
:1.13rc1: 2009-03-10

This release includes bug fixes and a few performance and feature improvements.
GNU Changelog output can now be produced by ``bzr log --gnu-changelog``.
Debug flags can now be set in ``~/.bazaar/bazaar.conf``.  Lightweight checkouts
and stacked branches should both be much faster over remote connections.
